[package]
name = "luxhub-marketplace"
version = "0.1.0"
edition = "2021"
description = "LuxHub Marketplace - NFT-backed luxury asset marketplace"

[lib]
name = "luxhub_marketplace"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"

[features]
default = []
cpi = []
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
